<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_60"
        android:layout_marginTop="@dimen/dimen_128"
        android:text="@string/login"
        android:textColor="@color/color_4c4c4c"
        android:textSize="@dimen/dimen_30" />

    <ImageView
        android:layout_width="@dimen/dimen_160"
        android:layout_height="@dimen/dimen_160"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/dimen_60"
        android:layout_marginRight="@dimen/dimen_10"
        android:background="@color/blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_210"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_8"
            android:layout_marginRight="@dimen/dimen_8"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_40">

                <ImageView
                    android:id="@+id/ivPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dimen_10"
                    android:background="@drawable/ic_phone" />

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ivPhone"
                    android:background="@color/activity_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/inputtel"
                    android:maxLength="11"
                    android:maxLines="1"
                    android:textColor="@color/color_4c4c4c"
                    android:textColorHint="@color/color_acacac"
                    android:textSize="@dimen/dimen_16" />

                <View
                    style="@style/line_858585"
                    android:layout_below="@+id/ivPhone"
                    android:layout_marginTop="@dimen/dimen_20" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_marginRight="@dimen/dimen_40">

                <ImageView
                    android:id="@+id/ivPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dimen_10"
                    android:background="@drawable/ic_pwd" />

                <EditText
                    android:layout_width="@dimen/dimen_100"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/ivPwd"
                    android:background="@color/activity_bg"
                    android:gravity="center_vertical"
                    android:hint="@string/inputcode"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/color_4c4c4c"
                    android:textColorHint="@color/color_acacac"
                    android:textSize="@dimen/dimen_16" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dimen_5"
                    android:paddingRight="@dimen/dimen_5"
                    android:text="@string/sendcode"
                    android:textColor="@color/color_4c4c4c"
                    android:textSize="@dimen/dimen_14" />

                <View
                    style="@style/line_858585"
                    android:layout_below="@+id/ivPwd"
                    android:layout_marginTop="@dimen/dimen_20" />
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_40"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_40"
                android:layout_marginBottom="@dimen/dimen_30"
                android:background="@drawable/shape_login_select"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:paddingTop="@dimen/dimen_12"
                android:paddingBottom="@dimen/dimen_12"
                android:text="@string/querylogin"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_40"
            android:layout_marginRight="@dimen/dimen_40">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:gravity="center"
                    android:text="@string/loginwx"
                    android:textColor="@color/color_858585"
                    android:textSize="@dimen/dimen_14" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:gravity="center"
                    android:text="@string/loginphone"
                    android:textColor="@color/color_858585"
                    android:textSize="@dimen/dimen_14" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="@dimen/dimen_40"
                    android:layout_height="@dimen/dimen_40"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dimen_5"
                    android:gravity="center"
                    android:text="@string/loginemplee"
                    android:textColor="@color/color_858585"
                    android:textSize="@dimen/dimen_14" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


</FrameLayout>